# Graph.hls

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  HLS_BACKEND_NOTES.md  LICENSE  README.md  algorithm_defines.md  ir_translate_plan.md  language_definition.md  test.dsl
apps/: als.dsl  ar.dsl  bfs.dsl  connected_components.dsl  connected_components_swemu_one_big.dsl  graph_coloring.dsl  pagerank.dsl  pagerank_swemu_one_big.dsl  sssp.dsl  sssp_ep1.dsl  sssp_ep2.dsl  sssp_ep4.dsl  sssp_swemu_one_big.dsl  sssp_unweighted.dsl  sssp_unweighted_swemu_one_big.dsl  wcc.dsl
apps/buggy_demos/: sssp_algorithm_bug.dsl
apps/test_graphs/: als_small.json  ar_small.json  bfs_small.json  connected_components_small.json  graph_coloring_small.json  (+3 more)
data/: dataset_short_names.csv  hwemu_debug_baseline.tsv  swemu_baseline.csv
docs/: batch_simulation_guide.md  ddr_codegen_guide.md  dsl_writing_guide.md  emit_hls.md  grouping32_static_model_2026-04-04.json  grouping_static_model_2026-04-02.json  hls_template_status.md  hls_templates_overview.md  hw_emu_docker.md  scripts.md  simulator_speed_guide.md
scripts/: ae_build.sh  ae_check_builds.sh  ae_emit_fig7.sh  ae_emit_fig8.sh  ae_emit_fig9.sh  ae_fig10.sh  ae_plot.py  ae_run.sh  ae_tab3.sh  batch_simulate.sh  compile_hls_hw.sh  convert_regraph_csv.py  convert_thundergp_csv.py  dataset_short_names.csv  ddr_dataset_config.sh  hw_emu_matrix.sh  parallel_hw_emu.sh  plot_sim_results.py  run_ddr_codegen_all.sh  run_hwemu_docker_one.sh  run_target_one.sh  topology_sweep.py
src/: lib.rs  main.rs
tests/: gas_apps.rs  host_build.rs
(+241 files in other folders)
