[package]
name = "refactor_Graphyflow"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = { version = "0.9", default-features = false, features = ["std"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["std", "std_rng"] }

[dev-dependencies]
rstest = "0.19"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = "debuginfo"
